# anemos-py

./: .gitignore  Developer.md  LICENSE  README.md  pyproject.toml  requirements.txt  sample.py  setup.py
.devcontainer/: devcontainer.json
.github/workflow/: publish.yml
.github/workflows/: CI.yml  publish.yml  schedule-update-actions.yml  semantic-pr-check.yml  template-sync.yml
anemos/: __init__.py
anemos/weather/: __init__.py  schemas.py  weather.py
src/anemos/: __init__.py  hello.py
src/anemos/weather/: schemas.py
tests/: test_hello.py  test_weather.py
